manifests/vault-ops.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-deployment
  namespace: vault-ops
  labels:
    app.kubernetes.io/name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
    spec:
      containers:
      - name: vault
        image: vault:latest
        command: ["vault"]
        args: ["server", "-config", "/etc/vault.d/vault.hcl"]
        ports:
        - containerPort: 8200
          name: api
        volumeMounts:
        - name: config
          mountPath: "/etc/vault.d"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: vault-config
          items:
          - key: "vault.hcl"
            path: "vault.hcl"
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault-ops
spec:
  selector:
    app.kubernetes.io/name: vault
  type: ClusterIP
  ports:
    - name: api
      protocol: TCP
      port: 443
      targetPort: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault-ops
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - vault-ops.lamecorp.com
    secretName: vault-tls
  rules:
  - host: vault-ops.lamecorp.com
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 443
        path: /
        pathType: Prefix
